# Hex3

./: .gitignore  README.md
non_real_time/: CAN.sh  README  can_testing.py
non_real_time/container/: Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  init_dev.sh
non_real_time/container/setup/: system-requirements.txt
non_real_time/container/src/: entry_point.sh
non_real_time/container/src/ros2_ws/src/can/: CMakeLists.txt  package.xml
non_real_time/container/src/ros2_ws/src/can/config/: leg_groups.json
non_real_time/container/src/ros2_ws/src/can/msg/: LegCommand.msg
non_real_time/container/src/ros2_ws/src/can/resource/: leg_groups.json
non_real_time/container/src/ros2_ws/src/can/src/: can_interface.cpp  can_interface.hpp  leg_command_publisher.cpp
non_real_time/container/src/ros2_ws/src/can_node/: CMakeLists.txt  package.xml
non_real_time/container/src/ros2_ws/src/can_node/src/: can_node.cpp
non_real_time/container/src/ros2_ws/src/control/control/: xbox_joy_config.py
non_real_time/container/src/ros2_ws/src/gait/: CMakeLists.txt  package.xml
non_real_time/container/src/ros2_ws/src/gait_node/gait_node/: gait.py
non_real_time/container/src/ros2_ws/src/hexapod_manager/config/: robot_domains.local.json
non_real_time/container/src/ros2_ws/src/hexapod_manager/hexapod_manager/: status_reporter.py
non_real_time/container/src/ros2_ws/src/hexapod_manager/launch/: hexapod.launch.py  user_controlled.yml
non_real_time/container/src/ros2_ws/src/hexapod_manager/resource/: battery_table.json
non_real_time/container/src/ros2_ws/src/hexapod_msgs/: CMakeLists.txt  package.xml  setup.cfg  setup.py
non_real_time/container/src/ros2_ws/src/hexapod_msgs/msg/: BodyPose.msg  BodyPoseArray.msg  FootTarget.msg  FootTargetArray.msg
non_real_time/container/src/ros2_ws/src/hexapod_tester/: CMakeLists.txt  package.xml
non_real_time/container/src/ros2_ws/src/hexapod_tester/src/: ik_and_can_test.cpp  ik_and_can_test_array_pub.cpp
non_real_time/container/src/ros2_ws/src/inverse_kinematics/: CMakeLists.txt  package.xml
non_real_time/container/src/ros2_ws/src/inverse_kinematics/config/: ik_config.json  leg_config.json
non_real_time/container/src/ros2_ws/src/tripod_gait/: CMakeLists.txt  package.xml  setup.cfg  setup.py
non_real_time/cron_jobs/start_container/: cronjob  start_container
real_time/teensy_code/: platformio.ini
real_time/teensy_code/lib/HexapodController/src/: axis.cpp  axis.hpp  command_queue.cpp  command_queue.hpp  config.hpp  hexapod.cpp  hexapod.hpp  leg.cpp  leg.hpp  operation_queue.cpp  position.cpp  position.hpp  three_by_matrices.cpp  three_by_matrices.hpp
real_time/teensy_code/src/: main.cpp
real_time/xiao_code/: .gitignore  pi_can_tester  platformio.ini
real_time/xiao_code/lib/HexapodController/: TEMPLATE_user_config.hpp
real_time/xiao_code/lib/HexapodController/src/: axis.cpp  axis.hpp  can.cpp  can.hpp  command_queue.cpp  command_queue.hpp  config.hpp  example_user_config.hpp  hexapod.cpp  hexapod.hpp  hexapod_controller.hpp  leg.cpp  leg.hpp  log_levels.hpp  mpc.cpp  mpc.hpp  mux.cpp  mux.hpp  operation_queue.hpp  serial_parser.cpp  step_queue.cpp  step_queue.hpp  toe.cpp  toe.hpp  user_config.hpp  voltage_monitor.cpp  voltage_monitor.hpp
real_time/xiao_code/src/: main.cpp
real_time/xiao_code/test/: axis_test.cpp  can_test.cpp
(+15 files in other folders)
